2024-09-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Improve handling of rematerialized stack locations.

2024-09-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  src/mos6502/gen.c:
	  Assertions to help track down bug #3781.

2024-09-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def:
	  Peephole optimizer rule flag condition fix.

2024-09-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def:
	  Fix and improve right shift optimization, RFE #935.

2024-09-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def,
	  support/regression/tests/shifts3.c.in:
	  Right shift optimization inspired by RFE #935.

2024-09-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc/support/scripts/sdcc.nsi:
	  Include f8 port in Windows installer.
	* src/SDCClabel.c,
	  src/SDCCopt.c:
	  Improve handling of string literals in dead-code elimination, RFE #567.

2024-09-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3779.c:
	  Fix bug #3779.

2024-09-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCval.c,
	  src/pic14/main.c,
	  src/pic16/main.c,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Operator priority fixes from patch #474.
	* device/lib/clean.mk:
	  Fix make clean for f8 library.
	* src/mcs51/main.c,
	  support/regression/tests/patch-466.c:
	  Pick some bits of patch #466.

2024-09-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/ports/ez80-z80/spec.mk,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz180-resiy/spec.mk:
	  Use 60s regression test timeout for most z80-related ports.

2024-09-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-2645.c,
	  support/regression/tests/bug-2663.c:
	  Fix remaining part of bug #3770.

2024-09-04 Philipp Klaus Krause <philipp@colecovision.eu>
