@@ -1,3 +1,10 @@
+2024-09-23 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCopt.c,
+	  src/SDCCsymt.c,
+	  src/SDCClospre.cc:
+	  Improve handling of nested struct/union/array, part of RFE #937.
+
 2024-09-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/stm8/gen.c:
